--- a/p8105_hw6_cl4469.Rmd
+++ b/p8105_hw6_cl4469.Rmd
@@ -101,9 +101,11 @@ model_results |>
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-
 ### Problem 2
+
+#### Download Dataset
 ```{r}
+
 weather_df = 
   rnoaa::meteo_pull_monitors(
     c("USW00094728"),
@@ -115,6 +117,29 @@ weather_df =
     tmin = tmin / 10,
     tmax = tmax / 10) |>
   select(name, id, everything())
+
+```
+
+#### Bootstrap Resampling
+```{r}
+boot_strap = weather_df |>
+  modelr::bootstrap(n = 5000) |>
+  mutate(
+    models= map(strap, ~lm(tmax ~ tmin + prcp, data = .x)),
+    r = map(models, broom::glance),
+    results = map(models, broom::tidy)) |>
+  select(.id,results,r) |> 
+  unnest(r,results) |>
+  select(.id, term, estimate, r.squared) |>
+  pivot_wider(
+    names_from = term,
+    values_from = estimate
+  ) |>
+  rename(
+    beta_0 = `(Intercept)`,
+    beta_1 = tmin,
+    beta_2 = prcp)
+
 ```
 
 ### Problem 3
