--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -166,6 +166,8 @@ model_results |>
 
 ### Problem 2
 
+#### Download Dataset
+
 ``` r
 weather_df = 
   rnoaa::meteo_pull_monitors(
@@ -185,5 +187,27 @@ weather_df =
     ## date created (size, mb): 2023-10-31 11:06:12.316211 (8.538)
 
     ## file min/max dates: 1869-01-01 / 2023-10-31
+
+#### Bootstrap Resampling
+
+``` r
+boot_strap = weather_df |>
+  modelr::bootstrap(n = 5000) |>
+  mutate(
+    models= map(strap, ~lm(tmax ~ tmin + prcp, data = .x)),
+    r = map(models, broom::glance),
+    results = map(models, broom::tidy)) |>
+  select(.id,results,r) |> 
+  unnest(r,results) |>
+  select(.id, term, estimate, r.squared) |>
+  pivot_wider(
+    names_from = term,
+    values_from = estimate
+  ) |>
+  rename(
+    beta_0 = `(Intercept)`,
+    beta_1 = tmin,
+    beta_2 = prcp)
+```
 
 ### Problem 3
