--- a/p8105_hw6_cl4469.Rmd
+++ b/p8105_hw6_cl4469.Rmd
@@ -121,7 +121,7 @@ weather_df =
 ```
 
 #### Bootstrap Resampling
-```{r}
+```{r, warning=FALSE}
 boot_strap = weather_df |>
   modelr::bootstrap(n = 5000) |>
   mutate(
@@ -138,7 +138,21 @@ boot_strap = weather_df |>
   rename(
     beta_0 = `(Intercept)`,
     beta_1 = tmin,
-    beta_2 = prcp)
+    beta_2 = prcp) |>
+  summarise(id=.id,
+            r_squared = r.squared,
+            log_beta12 = log(beta_1*beta_2)) |>
+  na.omit()
+
+```
+    
+Plot the distribution of ${r^2}$
+```{r}
+boot_strap |>
+  ggplot(aes(x = r_squared)) +
+  geom_density()+
+  labs(title = "Distribution of r_squared Estimates",
+       x = "r_squared estimates")
 
 ```
 
