Calculate CI for r-squared and log_bata12

--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -231,7 +231,7 @@ Comment: We find that the distribution of r_squared estimates is
 approximately as normal distribution, and the r_squared estimates are
 around 0.92, indicating `tmin` and `prcp` are good predictors of `tmax`.
 
-\####Plot the distributions of log(beta_1 \* beta_2)
+#### Plot the distributions of log(beta_1 \* beta_2)
 
 ``` r
 boot_noNA |>
@@ -246,5 +246,39 @@ Comment: After dropping the NA value of log_beta12 in boot_strap
 dataset, we plot the distribution of log(beta_1 \* beta_2). We find that
 the estimates for log(beta_1 \* beta_2) are left skewed and have some
 outliers, with a frequency around -5.5.
+
+#### Calculate CI for r-squared and log
+
+The 95% confidence interval for r_squared
+
+``` r
+r_squared_ci = 
+  quantile(pull(boot_strap, r_squared),
+           probs = c(0.025,0.975)) |>
+  knitr::kable()
+
+r_squared_ci
+```
+
+|       |         x |
+|:------|----------:|
+| 2.5%  | 0.8891223 |
+| 97.5% | 0.9408387 |
+
+The 95% confidence interval for log(beta_1 \* beta_2)
+
+``` r
+log_beta12_ci = 
+  quantile(pull(boot_noNA, log_beta12),
+           probs = c(0.025,0.975)) |> 
+  knitr::kable()
+
+log_beta12_ci
+```
+
+|       |         x |
+|:------|----------:|
+| 2.5%  | -8.965722 |
+| 97.5% | -4.614753 |
 
 ### Problem 3
