--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -247,7 +247,7 @@ dataset, we plot the distribution of log(beta_1 \* beta_2). We find that
 the estimates for log(beta_1 \* beta_2) are left skewed and have some
 outliers, with a frequency around -5.5.
 
-#### Calculate CI for r-squared and log
+#### Calculate CI for r-squared and log_beta12
 
 The 95% confidence interval for r_squared
 
@@ -262,8 +262,8 @@ r_squared_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | 0.8891223 |
-| 97.5% | 0.9408387 |
+| 2.5%  | 0.8888421 |
+| 97.5% | 0.9406928 |
 
 The 95% confidence interval for log(beta_1 \* beta_2)
 
@@ -278,7 +278,57 @@ log_beta12_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | -8.965722 |
-| 97.5% | -4.614753 |
+| 2.5%  | -9.151877 |
+| 97.5% | -4.542166 |
 
 ### Problem 3
+
+load dataset
+
+``` r
+birth <- read_csv("data/birthweight.csv")
+```
+
+    ## Rows: 4342 Columns: 20
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (20): babysex, bhead, blength, bwt, delwt, fincome, frace, gaweeks, malf...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+clean birthweight dataset
+
+``` r
+# Check for missing data
+sum(is.na(birth))
+```
+
+    ## [1] 0
+
+``` r
+# Clean dataset
+birth_tidy = birth |>
+  janitor::clean_names() |>
+  mutate(babysex = case_when(babysex == 1 ~ 'male',
+                             babysex == 2 ~ 'female'),
+         frace = case_when(frace == 1 ~ "White",
+                        frace == 2 ~ "Black",
+                        frace == 3 ~ "Asian",
+                        frace == 4 ~ "Puerto Rican",
+                        frace == 8 ~ "Other",
+                        frace == 9 ~ "Unknown"),
+         malform = case_when(malform == 0 ~ 'absent',
+                             malform == 1 ~ 'present'),
+         mrace = case_when(mrace == 1 ~ "White",
+                        mrace == 2 ~ "Black",
+                        mrace == 3 ~ "Asian",
+                        mrace == 4 ~ "Puerto Rican",
+                        mrace == 8 ~ "Other"),
+         babysex = as.factor(babysex),
+         babysex = as.factor(babysex),
+         malform = as.factor(malform),
+         mrace = as.factor(mrace))
+```
+
+There’s no NAs in the original dataset.
