--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -25,6 +25,8 @@ library(viridis)
     ## Loading required package: viridisLite
 
 ``` r
+library(modelr)
+
 knitr::opts_chunk$set(
     echo = TRUE,
     warning = FALSE,
@@ -262,8 +264,8 @@ r_squared_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | 0.8888421 |
-| 97.5% | 0.9406928 |
+| 2.5%  | 0.8881528 |
+| 97.5% | 0.9412636 |
 
 The 95% confidence interval for log(beta_1 \* beta_2)
 
@@ -278,8 +280,8 @@ log_beta12_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | -9.151877 |
-| 97.5% | -4.542166 |
+| 2.5%  | -9.085632 |
+| 97.5% | -4.525609 |
 
 ### Problem 3
 
@@ -332,3 +334,46 @@ birth_tidy = birth |>
 ```
 
 There’s no NAs in the original dataset.
+
+``` r
+# fit a full model
+full_model = lm(bwt ~ ., data = birth_tidy) %>% 
+  step(direction = "backward", trace = FALSE) 
+
+full_model %>% 
+  broom::tidy() %>% 
+  knitr::kable()
+```
+
+| term              |      estimate |   std.error |   statistic |   p.value |
+|:------------------|--------------:|------------:|------------:|----------:|
+| (Intercept)       | -6145.1506698 | 141.9496468 | -43.2910599 | 0.0000000 |
+| babysexmale       |   -28.5580171 |   8.4548958 |  -3.3776900 | 0.0007374 |
+| bhead             |   130.7770408 |   3.4465672 |  37.9441440 | 0.0000000 |
+| blength           |    74.9471109 |   2.0190479 |  37.1200270 | 0.0000000 |
+| delwt             |     4.1067316 |   0.3920592 |  10.4747754 | 0.0000000 |
+| fincome           |     0.3180229 |   0.1747477 |   1.8198980 | 0.0688436 |
+| gaweeks           |    11.5924873 |   1.4620657 |   7.9288417 | 0.0000000 |
+| mheight           |     6.5940377 |   1.7848817 |   3.6943835 | 0.0002231 |
+| mraceBlack        |   -63.9057046 |  42.3662612 |  -1.5084103 | 0.1315225 |
+| mracePuerto Rican |   -25.7913672 |  45.3501537 |  -0.5687162 | 0.5695783 |
+| mraceWhite        |    74.8867755 |  42.3146313 |   1.7697608 | 0.0768374 |
+| parity            |    96.3046933 |  40.3362158 |   2.3875490 | 0.0170038 |
+| ppwt              |    -2.6755853 |   0.4273585 |  -6.2607517 | 0.0000000 |
+| smoken            |    -4.8434197 |   0.5855757 |  -8.2712102 | 0.0000000 |
+
+``` r
+birth_tidy |>
+    add_predictions(full_model) |>
+    add_residuals(full_model) |>
+    ggplot(aes(x = pred, y = resid)) +
+    geom_point()  + 
+    geom_smooth(method = "lm") + 
+    labs(title = "Residuals Against Fitted Values", 
+       x = "Fitted Values", 
+       y = "Residuals")
+```
+
+    ## `geom_smooth()` using formula = 'y ~ x'
+
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
