--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -27,6 +27,7 @@ library(viridis)
 ``` r
 library(modelr)
 
+
 knitr::opts_chunk$set(
     echo = TRUE,
     warning = FALSE,
@@ -228,7 +229,7 @@ boot_strap |>
        x = "r_squared estimates")
 ```
 
-<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
 Comment: We find that the distribution of r_squared estimates is
 approximately as normal distribution, and the r_squared estimates are
 around 0.92, indicating `tmin` and `prcp` are good predictors of `tmax`.
@@ -243,7 +244,7 @@ boot_noNA |>
        x = "log(beta_1 * beta_2) estimates")
 ```
 
-<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
 Comment: After dropping the NA value of log_beta12 in boot_strap
 dataset, we plot the distribution of log(beta_1 \* beta_2). We find that
 the estimates for log(beta_1 \* beta_2) are left skewed and have some
@@ -264,8 +265,8 @@ r_squared_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | 0.8881528 |
-| 97.5% | 0.9412636 |
+| 2.5%  | 0.8890159 |
+| 97.5% | 0.9404641 |
 
 The 95% confidence interval for log(beta_1 \* beta_2)
 
@@ -280,8 +281,8 @@ log_beta12_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | -9.085632 |
-| 97.5% | -4.525609 |
+| 2.5%  | -9.151665 |
+| 97.5% | -4.617658 |
 
 ### Problem 3
 
@@ -376,4 +377,65 @@ birth_tidy |>
 
     ## `geom_smooth()` using formula = 'y ~ x'
 
-<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
+
+``` r
+# model 2
+model2 = lm(bwt ~ blength + gaweeks, data = birth_tidy)
+model2 |>
+  broom::tidy() |> 
+  knitr::kable()
+```
+
+| term        |    estimate | std.error | statistic | p.value |
+|:------------|------------:|----------:|----------:|--------:|
+| (Intercept) | -4347.66707 | 97.958360 | -44.38281 |       0 |
+| blength     |   128.55569 |  1.989891 |  64.60439 |       0 |
+| gaweeks     |    27.04673 |  1.717930 |  15.74379 |       0 |
+
+``` r
+# model 3
+model3 = lm(bwt ~ bhead * blength * babysex, data = birth_tidy)
+model3 |>
+  broom::tidy() |> 
+  knitr::kable()
+```
+
+| term                      |     estimate |    std.error |  statistic |   p.value |
+|:--------------------------|-------------:|-------------:|-----------:|----------:|
+| (Intercept)               |  -801.948671 | 1102.3077046 | -0.7275180 | 0.4669480 |
+| bhead                     |   -16.597546 |   34.0916082 | -0.4868514 | 0.6263883 |
+| blength                   |   -21.645964 |   23.3720477 | -0.9261475 | 0.3544209 |
+| babysexmale               | -6374.868351 | 1677.7669213 | -3.7996150 | 0.0001469 |
+| bhead:blength             |     3.324444 |    0.7125586 |  4.6655020 | 0.0000032 |
+| bhead:babysexmale         |   198.393181 |   51.0916850 |  3.8830816 | 0.0001047 |
+| blength:babysexmale       |   123.772887 |   35.1185360 |  3.5244319 | 0.0004288 |
+| bhead:blength:babysexmale |    -3.878053 |    1.0566296 | -3.6702106 | 0.0002453 |
+
+``` r
+cv_df= 
+    crossv_mc(birth_tidy, 100) |>
+    mutate(train = map(train, as_tibble),
+           test = map(test,as_tibble)) |>
+   mutate(model1 = map(train, ~ full_model),
+          model2 = map(train, ~ model2),
+          model3 = map(train, ~ model3)) |>
+    mutate(rmse_model1 = map2_dbl(model1, test, ~rmse(model = .x,data = .y)),
+           rmse_model2 = map2_dbl(model2, test, ~rmse(model = .x,data = .y)),
+           rmse_model3 = map2_dbl(model3, test, ~rmse(model = .x,data = .y))
+    )
+
+
+cv_df |>
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") |> 
+  mutate(model = fct_inorder(model)) |> 
+  ggplot(aes(x = model, y = rmse)) + 
+  geom_violin()
+```
+
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
