--- a/p8105_hw6_cl4469.md
+++ b/p8105_hw6_cl4469.md
@@ -265,8 +265,8 @@ r_squared_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | 0.8890159 |
-| 97.5% | 0.9404641 |
+| 2.5%  | 0.8897861 |
+| 97.5% | 0.9409187 |
 
 The 95% confidence interval for log(beta_1 \* beta_2)
 
@@ -281,14 +281,15 @@ log_beta12_ci
 
 |       |         x |
 |:------|----------:|
-| 2.5%  | -9.151665 |
-| 97.5% | -4.617658 |
+| 2.5%  | -8.972816 |
+| 97.5% | -4.562658 |
 
 ### Problem 3
 
-load dataset
+#### Load and Clean birthweight dataset
 
 ``` r
+#load dataset
 birth <- read_csv("data/birthweight.csv")
 ```
 
@@ -299,8 +300,6 @@ birth <- read_csv("data/birthweight.csv")
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-clean birthweight dataset
 
 ``` r
 # Check for missing data
@@ -334,15 +333,21 @@ birth_tidy = birth |>
          mrace = as.factor(mrace))
 ```
 
-There’s no NAs in the original dataset.
+Comment: There’s no NAs in the original dataset.
+
+#### Regression Model
+
+Propose a regression model for birthweight. This model may be based on a
+hypothesized structure for the factors that underly birthweight, on a
+data-driven model-building process, or a combination of the two.
 
 ``` r
 # fit a full model
-full_model = lm(bwt ~ ., data = birth_tidy) %>% 
+full_model = lm(bwt ~ ., data = birth_tidy) |>
   step(direction = "backward", trace = FALSE) 
 
-full_model %>% 
-  broom::tidy() %>% 
+full_model |>
+  broom::tidy() |>
   knitr::kable()
 ```
 
@@ -363,6 +368,13 @@ full_model %>%
 | ppwt              |    -2.6755853 |   0.4273585 |  -6.2607517 | 0.0000000 |
 | smoken            |    -4.8434197 |   0.5855757 |  -8.2712102 | 0.0000000 |
 
+Comment: To creat a regression model for birthweight, I fit on a model
+based on all variables as predictors, including babysex, bhead, blength,
+delwt, fincome, gaweeks, mheight, etc. Then, I use backward stepwise
+regression.
+
+#### Plot of Model Residuals Against Fitted Values
+
 ``` r
 birth_tidy |>
     add_predictions(full_model) |>
@@ -377,7 +389,19 @@ birth_tidy |>
 
     ## `geom_smooth()` using formula = 'y ~ x'
 
-<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+Comment: Most points are clustered between 2000 and 4000 fitted values,
+and between -1000 and 1000 residuals.Besides, the slope of the fitted
+line is almost 0. Since there is no clear direction for this plot, we
+cannot analysis the relationship for model residuals against fitted
+values.
+
+#### Creat two other models
+
+Compare your model to two others:One using length at birth and
+gestational age as predictors, One using head circumference, length,
+sex, and all interactions (including the three-way interaction) between
+these
 
 ``` r
 # model 2
@@ -412,6 +436,8 @@ model3 |>
 | blength:babysexmale       |   123.772887 |   35.1185360 |  3.5244319 | 0.0004288 |
 | bhead:blength:babysexmale |    -3.878053 |    1.0566296 | -3.6702106 | 0.0002453 |
 
+#### Make Comparison of Cross-validated Prediction Error
+
 ``` r
 cv_df= 
     crossv_mc(birth_tidy, 100) |>
@@ -425,7 +451,6 @@ cv_df=
            rmse_model3 = map2_dbl(model3, test, ~rmse(model = .x,data = .y))
     )
 
-
 cv_df |>
   select(starts_with("rmse")) |> 
   pivot_longer(
@@ -438,4 +463,11 @@ cv_df |>
   geom_violin()
 ```
 
-<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+<img src="p8105_hw6_cl4469_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+Comment: From the plots, we can conclude that the full model, which
+consider all predictors, has the smallest RMSE, indicating that the
+predictions in this model are closer to the actual values than the other
+two; however, the model2, which consider length at birth and gestational
+age as predictors, has the largest RMSE, indicating that the predictions
+in this model may far away from the true values. Therefore, it is better
+to use model1 than model2 and model3.
